[tool.poetry]
name = "coveless_raspberry_api"
version = "0.1.0"
description = ""
authors = ["Javier Fernández <jfernandez@joifilabs.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
requests = "^2.25.1"
gpiozero = "^1.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
