[tool.poetry]
name = "rpi-miyel"
version = "0.1.0"
description = ""
authors = ["Javier Fernández <jfernandz1290@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
gpiozero = "^1.6.2"
requests = "^2.25.1"
"RPi.GPIO" = "^0.7.0"
pigpio = "^1.78"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
